--- a/client/public/style.css
+++ b/client/public/style.css
@@ -4,6 +4,8 @@ body {
   background: #c8c8c8;
   background-size: cover;
   font: 'Open Sans', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
 }
 #logo {
   float: left;
@@ -12,11 +14,6 @@ body {
   margin-right: 1vw;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-  }
-  
   * {
     box-sizing: border-box;
   }
@@ -34,12 +31,12 @@ body {
     font-weight: bold;
     
 }
-/* h2{
+h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    text-align: left;
+    text-align: center;
     font-weight: bold;
-} */
+}
 h3{
     font-family: Arial, Helvetica, sans-serif !important;
     font-size: 15px !important;
@@ -69,13 +66,16 @@ input[type=text]:focus, input[type=descriere]:focus {
     color: white;
     padding: 16px 20px;
     margin: 2vw ;
+    margin-top: 3vw;
+    margin-bottom:3vw;
     border: none;
     cursor: pointer;
-    width: 95vw;
+    width: 92vw;
     opacity: 0.9;
     display:flex;
     flex-flow: row nowrap;
-    text-align: center;
+    text-align: center !important;
+    justify-content: center !important;
   }
 .custombtn:hover {
     opacity: 1;
@@ -444,6 +444,7 @@ label{
   }
   .cont_form_sign_up {
     position: absolute;
+    height: 100vh;
     width: 320px;
   float: left;
     opacity: 0;
@@ -460,7 +461,8 @@ label{
   text-align: left;
     padding: 15px 5px;
   margin-left: 10px;
-  margin-top: 20px;
+  margin-top: 15px;
+  height: 10px;
     width: 260px;
   border: none;
       color: #757575;
