--- a/client/public/style.css
+++ b/client/public/style.css
@@ -20,6 +20,7 @@ body {
   .container {
     position: absolute;
     top:12vh;
+    width: 100vw !important;
     padding: 30px;
     text-align: center;
     background-color: white;
@@ -73,12 +74,24 @@ input[type=text]:focus, input[type=descriere]:focus {
     width: 92vw;
     opacity: 0.9;
     display:flex;
+    border-radius: 25px;
     flex-flow: row nowrap;
     text-align: center !important;
     justify-content: center !important;
   }
+
+.custombtn:disabled {
+  pointer-events: none;
+}
+
 .custombtn:hover {
-    opacity: 1;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.custombtn:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
 table, td {
     border:2px solid black;
