--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,15 +1,35 @@
-body {
+/* body {
   margin: 0;
   color: #edf3ff;
   background: #c8c8c8;
   background-size: cover;
   font: 'Open Sans', sans-serif;
   font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+  background: url(https://media.istockphoto.com/photos/blue-background-picture-id157571423?k=20&m=157571423&s=612x612&w=0&h=GxSD_uRBNlBtsvXo54kGstPong-zzqKR545fF1Y5Mws=);
+
+} */
+body {
+  background: linear-gradient(-45deg, #ffb8a2, #ffffff, #9ca9ad, #c4fff1) !important;
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  /* height: 100vh; */
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 #logo {
   float: left;
   height: 8vh;
+  margin-top: 1vh;;
   margin-left: 2vw;
   margin-right: 1vw;
 }
@@ -17,17 +37,30 @@ body {
   * {
     box-sizing: border-box;
   }
-  .container {
+  #container {
     position: absolute;
     top:12vh;
     width: 100vw !important;
+    height: 100vh !important;
     padding: 30px;
     text-align: center;
-    background-color: white;
+    background: linear-gradient(-45deg, #ffb8a2, #ffffff, #9ca9ad, #c4fff1) !important;
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+
+  }
+  #btnLogOut{
+text-decoration: none;
+color: white;
+position: absolute;
+right: 2vw;
+top: 4vh;
   }
   h1{
-    font-family: Brush Script MT;
+    /* font-family: Brush Script MT; */
+    font-family: 'Games', sans-serif;
     font-size: 60px;
+    margin-top: 20px !important;
     text-align: center !important;
     font-weight: bold;
     
@@ -41,7 +74,8 @@ h2{
 h3{
     font-family: Arial, Helvetica, sans-serif !important;
     font-size: 15px !important;
-    text-align: left !important;
+    text-align: center !important;
+    margin-top: 20px !important;
 }
 
 hr {
@@ -49,7 +83,7 @@ hr {
     margin-bottom: 25px;
   }
 input[type=text], input[type=descriere] {
-    width: 100%;
+    width: 90%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
@@ -63,15 +97,15 @@ input[type=text]:focus, input[type=descriere]:focus {
 }
 
 .custombtn {
-    background-color: black;
+  background: linear-gradient(-45deg, #8d6457, #5a5a5a, #2b363a, #5d7e76) !important;
     color: white;
     padding: 16px 20px;
-    margin: 2vw ;
+    margin: 12vw ;
     margin-top: 3vw;
     margin-bottom:3vw;
     border: none;
     cursor: pointer;
-    width: 92vw;
+    width: 72vw;
     opacity: 0.9;
     display:flex;
     border-radius: 25px;
@@ -124,7 +158,7 @@ label{
   #formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
-    background: #fff;
+    /* background: #fff; */
     padding: 30px;
     width: 90%;
     max-width: 450px;
@@ -176,12 +210,10 @@ label{
     width: 100%;
     height: 100%;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cfd8dc+0,607d8b+100,b0bec5+100 */
-  background: #cfd8dc; /* Old browsers */
-  background: -moz-linear-gradient(-45deg,  #cfd8dc 0%, #607d8b 100%, #b0bec5 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg,  #cfd8dc 0%,#607d8b 100%,#b0bec5 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg,  #cfd8dc 0%,#607d8b 100%,#b0bec5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd8dc', endColorstr='#b0bec5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  
+  /* background: #cfd8dc; Old browsersackground: linear-gradient(135deg,  #cfd8dc 0%,#607d8b 100%,#b0bec5 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd8dc', endColorstr='#b0bec5',GradientType=1 ); 
+   */
+   background: linear-gradient(-45deg, #a55f47, #a3a3a3, #538291, #5da392) !important;
   }
   
   
@@ -334,7 +366,8 @@ label{
   }
   
   .btn_login { 
-  background-color: #26C6DA;
+  /* background-color: #26C6DA; */
+  background: linear-gradient(-45deg, #203b63, #397385, #2b363a, #4c8a92) !important;
     border: none;
     padding: 10px;
   width: 200px;
@@ -375,7 +408,8 @@ label{
   }
   
   .btn_sign_up { 
-  background-color: #ef5350;
+  /* background-color: #ef5350; */
+  background: linear-gradient(-45deg, #a1624f, #832222, #503521, #5e1f14) !important;
     border: none;
     padding: 10px;
   width: 200px;
@@ -525,12 +559,14 @@ label{
     position: fixed;
     -webkit-transition: top 0.3s ease-in-out;
     transition: top 0.3s ease-in-out;
-    background-color: #adadad !important;
+    background: linear-gradient(-45deg, #8d6457, #979797, #565e61, #5d7e76) !important;
+    /* background-color: #adadad !important; */
   }
   
   #navbar #logo {
     height: 3em;
     padding-left: 1em;
+    cursor: pointer;
   }
   
   #navbar .navbar-brand {
