--- a/client/public/style.css
+++ b/client/public/style.css
@@ -60,7 +60,7 @@ top: 4vh;
     /* font-family: Brush Script MT; */
     font-family: 'Games', sans-serif;
     font-size: 60px;
-    margin-top: 20px !important;
+    margin-top: 5vh !important;
     text-align: center !important;
     font-weight: bold;
     
